Fixed the text not showing on post statistics page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -216,7 +216,7 @@ button#button:hover {
   font-size: 18px;
   margin-bottom: 10px;
   padding: 10px;
-  background-color: #f9f9f9;
+  background-color: #858282;
   border-left: 5px solid #4a90e2;
 }
 
